1. Amend user change password logic 2. Amend admin function logic

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <style>
     .reset {
         width: 368px;
-        margin:auto;
+        margin: auto;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         padding: 24px 24px 100px;
         text-align: center;
@@ -11,8 +13,11 @@
 
 <div class="reset">
     <h2>Reset Your Password</h2>
-    <form th:action="@{/reset_password}" method="post" style="max-width: 350px; margin: 0 auto;">
-        <input type="hidden" name="token" th:value="${token}"/>
+
+    <form th:if="${invalid != 'true'}" id="myForm" th:action="@{/eDonor/change-password}" method="post" style="max-width: 350px; margin: 0 auto;"
+          onsubmit="changePassword(event);">
+        <input type="hidden" name="email" th:value="${email}" id="email"/>
+        <input type="hidden" name="token" th:value="${token}" id="token"/>
         <div class="border border-secondary rounded p-3">
             <div>
                 <p>
@@ -21,7 +26,7 @@
                 </p>
                 <p>
                     <input type="password" class="form-control" placeholder="Confirm your new password"
-                           required oninput="checkPasswordMatch(this);"/>
+                           id="confirmPassword" required oninput="checkPasswordMatch();"/>
                 </p>
                 <p class="text-center">
                     <input type="submit" value="Change Password" class="btn btn-primary"/>
@@ -29,4 +34,69 @@
             </div>
         </div>
     </form>
+    <h4 th:if="${invalid == 'true'}">You have already reset your password.</h4>
+    <h4 th:if="${invalid == 'true'}">Please login with your changed password.</h4>
 </div>
+
+<script>
+    function validatePassword(password) {
+        return !(password.length < 8 || password.length > 30);
+    }
+
+    function checkPasswordMatch() {
+        var password = document.getElementById("password").value;
+        var confirmPassword = document.getElementById("confirmPassword").value;
+        if (password !== confirmPassword) {
+            document.getElementById("confirmPassword").setCustomValidity("Passwords do not match");
+        } else {
+            document.getElementById("confirmPassword").setCustomValidity("");
+        }
+    }
+
+    function changePassword(event) {
+        event.preventDefault();
+        var password = document.getElementById("password").value;
+        var confirmPassword = document.getElementById("confirmPassword").value;
+        if (password !== confirmPassword) {
+            document.getElementById("confirmPassword").setCustomValidity("Passwords do not match");
+        } else if (!validatePassword(password)) {
+            document.getElementById("password").setCustomValidity("Password Length must within 8-30 characters");
+        } else {
+            document.getElementById("confirmPassword").setCustomValidity("");
+
+            // Form data
+
+            const formData = {
+                email: document.getElementById("email").value,
+                token: document.getElementById("token").value,
+                password: document.getElementById("password").value
+            };
+
+            const jsonString = JSON.stringify(formData);
+            var form = document.getElementById("myForm");
+
+            // AJAX request
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", form.action);
+            xhr.setRequestHeader("Content-Type", "application/json"); // Set the Content-Type header
+
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === XMLHttpRequest.DONE) {
+                    if (xhr.status === 200) {
+                        // Password updated successfully
+                        alert("Password updated successfully");
+                        form.reset();
+                        location.reload();
+                    } else {
+                        // Password update failed
+                        alert("Password update failed");
+                    }
+                }
+            };
+
+            xhr.send(jsonString);
+        }
+    }
+</script>
+
+</html>
