1. try to solve deployment issue

--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -14,8 +14,7 @@
 <div class="reset">
     <h2>Reset Your Password</h2>
 
-    <form th:if="${invalid != 'true'}" id="myForm" th:action="@{/eDonor/change-password}" method="post" style="max-width: 350px; margin: 0 auto;"
-          onsubmit="changePassword(event);">
+    <form th:if="${invalid != 'true'}" id="myForm" th:action="@{/eDonor/change-password}" method="post" style="max-width: 350px; margin: 0 auto;">
         <input type="hidden" name="email" th:value="${email}" id="email"/>
         <input type="hidden" name="token" th:value="${token}" id="token"/>
         <div class="border border-secondary rounded p-3">
@@ -39,8 +38,35 @@
 </div>
 
 <script>
+    document.getElementById("myForm").addEventListener("submit", function(event) {
+        event.preventDefault();
+        changePassword();
+    });
+
+    document.getElementById("password").addEventListener("input", validatePasswordOnInput);
+
+    function validatePasswordOnInput() {
+        var password = document.getElementById("password").value;
+        document.getElementById("password").setCustomValidity("");
+
+        if (!validatePassword(password)) {
+            document.getElementById("password").setCustomValidity("Password must be 8-30 characters long and " +
+                "contain at least one uppercase letter, one lowercase letter, one special character, and one digit");
+        } else {
+            document.getElementById("password").setCustomValidity("");
+        }
+    }
+
     function validatePassword(password) {
-        return !(password.length < 8 || password.length > 30);
+        // Password length should be between 8 and 30 characters
+        if (password.length < 8 || password.length > 30) {
+            return false;
+        }
+
+        // Password should contain at least one uppercase letter, one lowercase letter,
+        // one special character, and one number
+        var regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()])[a-zA-Z\d!@#$%^&*()]{8,30}$/;
+        return regex.test(password);
     }
 
     function checkPasswordMatch() {
@@ -53,14 +79,11 @@
         }
     }
 
-    function changePassword(event) {
-        event.preventDefault();
+    function changePassword() {
         var password = document.getElementById("password").value;
         var confirmPassword = document.getElementById("confirmPassword").value;
         if (password !== confirmPassword) {
             document.getElementById("confirmPassword").setCustomValidity("Passwords do not match");
-        } else if (!validatePassword(password)) {
-            document.getElementById("password").setCustomValidity("Password Length must within 8-30 characters");
         } else {
             document.getElementById("confirmPassword").setCustomValidity("");
 
